<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fragment_mars_photos_recycler_view_camera_name_textview"
            style="@style/HeaderTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_x_small"
            android:text="@string/camera_name" />

        <TextView
            android:id="@+id/fragment_mars_photos_recycler_view_sol_textview"
            style="@style/BaseTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_xx_small"
            android:text="@string/sol" />

        <TextView
            android:id="@+id/fragment_mars_photos_recycler_view_earth_date_textview"
            style="@style/BaseTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_xx_small"
            android:text="@string/earth_date" />

        <ImageView
            android:id="@+id/fragment_mars_photos_recycler_view_imageview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
</androidx.cardview.widget.CardView>