<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="50"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fragment_space_photo_title_text_view"
            style="@style/HeaderTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:gravity="center"
            android:text="@string/title" />

        <TextView
            android:id="@+id/fragment_space_photo_date_text_view"
            style="@style/BaseTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_xx_small"
            android:gravity="center"
            android:text="@string/date" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_xx_small"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TextView
                android:id="@+id/fragment_space_photo_explanation_text_view"
                style="@style/BaseTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/explanation" />

        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="50">

        <ImageView
            android:id="@+id/fragment_space_photo_imageview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

    <include layout="@layout/loading_layout" />
</LinearLayout>